Adjusting plotting for step 1

--- a/main.tex
+++ b/main.tex
@@ -88,7 +88,11 @@
         plot(t, x_k(3,:))
         hold off
     \end{verbatim}
-    
+
+    \begin{center}
+        \includegraphics*[width=4in]{Matlab Code/Step1_final_plot.png}
+    \end{center}
+
     \section*{Step 2}
     
     \section*{Step 3}
